--- a/Cash-Ruls.ini
+++ b/Cash-Ruls.ini
@@ -64,7 +64,7 @@ custom_proxy_group=🌳 Amazon`select`[]DIRECT`[]所有-手动`[]所有-自动`[
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
 custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
 custom_proxy_group=🔍 Google`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🎮 Steam`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
 custom_proxy_group=🎞️ YouTube`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
 custom_proxy_group=👌 虚拟币`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
 custom_proxy_group=⏱️ 检测`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
