--- a/Cash-Ruls.ini
+++ b/Cash-Ruls.ini
@@ -46,30 +46,31 @@ ruleset=🌍 国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GlobalMedia/GlobalMedia.list
-ruleset=🇨🇳 国内
-ruleset=🇨🇳 国内,[]FINAL
+ruleset=🇨🇳 国内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
+ruleset=🐟 漏网之鱼,[]FINAL
 
 ;2、策略组（域名组-节点组）
 custom_proxy_group=🚫 广告拦截`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=✨ AI`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🎞️ YouTube`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🎶 TikTok`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=📲 Telegram`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🕊️ Twitter(X)`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🔍 Google`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=👌 虚拟币`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=⏱️ 检测`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
-custom_proxy_group=🇨🇳 国内`select`[]DIRECT`[]所有-手动`[]所有-自动`[]REJECT
+custom_proxy_group=✨ AI`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🎞️ YouTube`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=📘 GitHub`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🎶 TikTok`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=📲 Telegram`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🕊️ Twitter(X)`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=Ⓜ️ Microsoft`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🔍 Google`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=👌 虚拟币`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=⏱️ 检测`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🌍 国外`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🌍 国外媒体`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🇨🇳 国内`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
+custom_proxy_group=🐟 漏网之鱼`select`[]DIRECT`[]所有-手动`[]所有-自动`[]香港`[]台湾`[]日本`[]韩国`[]新加坡`[]美国`[]德国`[]REJECT
 
 ;3、节点组
-custom_proxy_group=手动`select`.*
-custom_proxy_group=自动`url-test`.*`http://www.gstatic.com/generate_204`180,,25
+custom_proxy_group=所有-手动`select`.*
+custom_proxy_group=所有-自动`url-test`.*`http://www.gstatic.com/generate_204`180,,25
 custom_proxy_group=香港`select`(广港|香港|HK|Hong Kong|🇭🇰|HongKong)
 custom_proxy_group=台湾`select`(广台|台湾|台灣|TW|Tai Wan|🇹🇼|🇨🇳|TaiWan|Taiwan)
 custom_proxy_group=日本`select`(广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan)
